# signal-diffusion

./: .gitignore  AGENTS.md  README.md  REFACTOR.md  TODO.md  data-vis.ipynb  diffusers_training_example.ipynb  fma_dataset.py  fma_usage.ipynb  gen-weighted-dataset.py  infer_text_to_image.py  infer_text_to_image_lora.py  install-natten.sh  metrics.md  noise-floor.ipynb  pyproject.toml  pyproject.toml.sky  requirements.txt  run-cmd.sh  stft-test.ipynb  summary-plots.py  time-domain.md  train.py  train_text_to_image.py  train_text_to_image_lora.py  train_text_to_stft_lora.ipynb
common/: channel_map.py  dog.py  eeg_datasets.py  gen_multichannel_stft.py  general_dataset.py  make-train-only-parkinsons.py  multichannel_spectrograms.py  stft-test.ipynb
common/ear_eeg_support_scripts/: read_in_ear_eeg.py  read_in_labels.py
config/: CONFIG.md  accelerate_config.yaml  default-mac.toml  default.toml  sky-batch-sizes.yaml  sky-infer-hgls.yaml  sky-infer-sd35.yaml  sky-lambda-diffusion.yaml  sky-training-hrgls.yaml  sky-training-sd35.yaml  sky-training.yaml
config/classification/: baseline-db-iq.toml  baseline-db-polar.toml  baseline-timeseries.toml  baseline.toml  seed-timeseries.toml  test_gender_health_age.toml
config/diffusion/: README.md  baseline.toml  dit-db-iq.toml  dit-db-only.toml  dit-db-polar.toml  dit-timeseries.toml  flowers-hourglass.toml  flowers-long.toml  flowers.toml  hourglass-db-iq.toml  hourglass-db-only.toml  hourglass-db-polar.toml  hourglass-timeseries.toml  (+12 more)
data_processing/: assign_meta_classes.py  channel_map.py  general_dataset.py  math.py  mit.py  parkinsons.py  seed.py
docs/: MEMORY_PROFILING_GUIDE.md  classifier_scaffolding.md  configuration.md  data_layer.md  diffusion-training.md  index.md  localmamba_architecture.md  scripts.md
eeg_classification/: best_classifier.yaml  best_classifier.yml  classifier_hpo_sweep.py  cnn_classification.ipynb  cnn_models.py  diffusion-dataset-gen-weighted.ipynb  emotion-first.ipynb  general_class_sweep_copy.py  generated_classification-general.ipynb  generated_classification-multimodel.ipynb  generated_classification-parkinsons-lastlayer.ipynb  generated_classification-parkinsons.ipynb  generated_classification-seed.ipynb  generated_classification.ipynb  img2img-parkinsons.ipynb  models.py  multiclass-general.ipynb  split-synthetic-dataset.py  swa_cut_class_sweep.py  swa_cyc_class_sweep.py  sweep_overfit.txt  sweep_results.txt  tensor_board_clean.py  tensorboard_parse.py  test.py  train-best-classifiers.py  training.py  transformer_classification_2.0.ipynb  transformer_classification_2.0.py  transformer_models.py  visualization.py
fine_tuning/: README.md  diffusers_training_example.ipynb  dog.py  fma_utils.py  gen-base-image.sh  infer_text_to_image.py  infer_text_to_image_lora.py  models_and_data.txt  requirements-lambda.txt  requirements.txt  run-cmd.sh  sample-dataset.py  sky-aws-pokemon.yaml  sky-aws-stft.yaml  sky-training-pokemon.yaml  train_text_to_image.py  train_text_to_image_lora.py  train_text_to_stft_lora.ipynb  train_vae_decoder_stft.ipynb
hpo/: __init__.py  classification_hpo.py
hpo_results/: hpo_study_db-iq_gender_20251202_122336.json  hpo_study_db-iq_gender_20251216_113311.json  hpo_study_db-iq_mixed_20251202_190923.json  hpo_study_db-only_gender_20251129_204052.json  hpo_study_db-only_gender_20251201_164141.json  hpo_study_db-only_gender_20251215_233647.json  hpo_study_db-only_mixed_20251130_040028.json  hpo_study_db-only_mixed_20251201_203723.json  hpo_study_db-polar_gender_20251130_041405.json  hpo_study_db-polar_gender_20251202_021924.json  hpo_study_db-polar_gender_20251216_062354.json  hpo_study_db-polar_mixed_20251202_075245.json  hpo_study_timeseries_gender_20251204_200843.json  hpo_study_timeseries_mixed_20251203.json  hpo_study_timeseries_mixed_20251205_032031.json  hpo_summary.json
metrics/: calculate-metrics.py  downstream_classifiers.py  plot-classification.py  plot-mmd.py  requirements.txt  vae-only-dataset.py
saved_results/: hpo-db-iq-gender.json  hpo-db-only-gender.json  hpo-db-polar-gender.json
scripts/: analyze_hpo_results.py  dry_run_timeseries.py  edit_config.py  find_max_batch_size.py  find_max_model_size.py  gen_weighted_dataset.py  gen_weighted_spectrogram_dataset.py  gen_weighted_timeseries_dataset.py  generate_from_diffusion.py  generate_image_grid.py  generate_synthetic_dataset.py  hpo_multi_config.py  model_param_summary.py  prep-configs-for-sky.sh  preprocess_data.py  preprocess_spectrograms.py  preprocess_timeseries.py  profile_classification.py  regenerate_all_meta_datasets.sh  run_classification_training.sh  run_diffusion_training.sh  run_gender_health_age_smoke.sh  run_gender_health_age_training.sh  sample_sd35_vae.py  stft_histograms.py  subdataset_weighting_analysis.py  test_configs.sh  train_with_best_hpo.py  weighted_dataset_utils.py
signal_diffusion/: __init__.py  log_setup.py  losses.py
tests/: test_losses.py  test_reconstruction.py  test_training_psnr.py
transformer_classification/: datasets.py  dog.py  models.py  training.py  transformer_classification.ipynb  transformer_classification_2.0.ipynb  visualization.py
vae/: .gitignore  contperceptual_loss.py  train_vae.py  train_vae_decoder_stft.ipynb
(+77 files in other folders)
