[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-diffusion"
version = "0.1.0"
description = "EEG spectrogram diffusion, classification, and evaluation tooling."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bidict",
    "numpy",
    "scipy",
    "pandas",
    "torch>=2.8",
    "torchaudio",
    "torchvision",
    "datasets[vision]",
    "librosa",
    "mne<1.6",
    "pillow",
    "tqdm",
    "typer",
    "matplotlib",
    "seaborn",
    "accelerate",
    "tensorboard",
    "notebook>=7.4.5",
    "diffusers>=0.35.1",
    "ipywidgets>=8.1.7",
    "coloredlogs>=15.0.1",
    "xformers>=0.0.32.post2",
    "transformers>=4.56.2",
    "peft>=0.17.1",
    "torch-fidelity @ git+https://github.com/toshas/torch-fidelity.git@1121d4dbb7497deaa38c8e67688bd1d373320082",
]

[dependency-groups]
dev = [
    "black>=24.3",
    "ruff>=0.6.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[tool.setuptools.packages.find]
include = ["signal_diffusion*", "common*"]
