[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-diffusion"
version = "0.1.0"
description = "EEG spectrogram diffusion, classification, and evaluation tooling."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bidict",
    "numpy>2",
    "scipy",
    "pandas",
    "torch>=2.8",
    "torchaudio",
    "torchvision",
    "datasets[vision]",
    "librosa",
    "mne<1.6",
    "pillow",
    "tqdm",
    "typer",
    "matplotlib",
    "seaborn",
    "accelerate",
    "tensorboard",
    "notebook>=7.4.5",
    "diffusers>=0.35.1",
    "ipywidgets>=8.1.7",
    "coloredlogs>=15.0.1",
    "transformers>=4.56.2",
    "peft>=0.17.1",
    "torch-fidelity @ git+https://github.com/toshas/torch-fidelity.git@1121d4dbb7497deaa38c8e67688bd1d373320082",
    "einops>=0.8.1",
    "optuna>=4.5.0",
    "causal-conv1d>=1.5.3.post1",
    "mamba-ssm>2",
]

# Optional GPU-accelerated packages (CUDA-dependent)
# Install with: pip install signal-diffusion[gpu]
[project.optional-dependencies]
gpu = [
    "flash-attn<=2.8.2",
    "xformers>=0.0.32.post2",
    # "natten==0.21.0+torch280cu128",  # Unable to use pre-built wheels for torch==2.8
]

[tool.uv]
no-build-isolation = true

# GPU-only package index (CUDA-dependent)
[[tool.uv.index]]
name = "NATTEN"
url = "https://whl.natten.org"
explicit = true

[tool.uv.sources]
# natten is GPU-only; uncomment and add to optional-dependencies[gpu] if needed
natten = { index = "NATTEN" }

[dependency-groups]
dev = [
    "black>=24.3",
    "ruff>=0.6.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[tool.setuptools.packages.find]
include = ["signal_diffusion*"]
